--- a/simplex.ipynb
+++ b/simplex.ipynb
@@ -1,1 +1,173 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# M\u00e9todo Simplex Tableau\n", "### Projeto M210 \u2013 Otimiza\u00e7\u00e3o\n", "\n", "Preencha os coeficientes abaixo (at\u00e9 4 vari\u00e1veis e 4 restri\u00e7\u00f5es)\n", "e execute todas as c\u00e9lulas para obter o resultado."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Quantidade de vari\u00e1veis e restri\u00e7\u00f5es\n", "n_vars = 4\n", "n_rest = 4\n", "\n", "# Coeficientes da fun\u00e7\u00e3o objetivo (Max Z)\n", "# Exemplo: Z = 3x1 + 5x2 + 2x3 + 4x4\n", "c = [3, 5, 2, 4]\n", "\n", "# Matriz das restri\u00e7\u00f5es (coeficientes do lado esquerdo)\n", "# Cada linha = uma restri\u00e7\u00e3o\n", "A = [\n", "    [2, 1, 1, 0],\n", "    [1, 2, 0, 1],\n", "    [1, 1, 2, 3],\n", "    [0, 2, 1, 1]\n", "]\n", "\n", "# Lado direito das restri\u00e7\u00f5es (<=)\n", "b = [8, 8, 10, 6]"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["import numpy as np\n", "from prettytable import PrettyTable\n", "\n", "def simplex_tableau(c, A, b):\n", "    A = np.array(A, dtype=float)\n", "    b = np.array(b, dtype=float)\n", "    m, n = A.shape\n", "    tableau = np.zeros((m + 1, n + m + 1))\n", "\n", "    tableau[:m, :n] = A\n", "    tableau[:m, n:n+m] = np.eye(m)\n", "    tableau[:m, -1] = b\n", "    tableau[-1, :n] = -np.array(c)\n", "    return tableau\n", "\n", "def mostrar_tableau(tableau):\n", "    t = PrettyTable()\n", "    for row in tableau:\n", "        t.add_row([f\"{x:.2f}\" for x in row])\n", "    print(t)\n", "\n", "def simplex(c, A, b):\n", "    tableau = simplex_tableau(c, A, b)\n", "    m, n = len(A), len(A[0])\n", "    iteracao = 0\n", "\n", "    while any(tableau[-1, :-1] < 0):\n", "        iteracao += 1\n", "        print(f\"\\nItera\u00e7\u00e3o {iteracao}:\")\n", "        mostrar_tableau(tableau)\n", "\n", "        col_pivo = np.argmin(tableau[-1, :-1])\n", "        if all(tableau[:-1, col_pivo] <= 0):\n", "            print(\"Solu\u00e7\u00e3o ilimitada!\")\n", "            return None\n", "\n", "        linhas_possiveis = tableau[:-1, -1] / tableau[:-1, col_pivo]\n", "        linhas_possiveis[tableau[:-1, col_pivo] <= 0] = np.inf\n", "        lin_pivo = np.argmin(linhas_possiveis)\n", "\n", "        tableau[lin_pivo, :] /= tableau[lin_pivo, col_pivo]\n", "        for i in range(len(tableau)):\n", "            if i != lin_pivo:\n", "                tableau[i, :] -= tableau[i, col_pivo] * tableau[lin_pivo, :]\n", "\n", "    print(\"\\nSolu\u00e7\u00e3o \u00f3tima encontrada:\")\n", "    mostrar_tableau(tableau)\n", "\n", "    n_vars = len(c)\n", "    x = np.zeros(n_vars)\n", "    for i in range(n_vars):\n", "        col = tableau[:-1, i]\n", "        if sum(col == 1) == 1 and sum(col) == 1:\n", "            lin = np.where(col == 1)[0][0]\n", "            x[i] = tableau[lin, -1]\n", "    print(f\"\\nVari\u00e1veis b\u00e1sicas: {x}\")\n", "    print(f\"Valor \u00f3timo Z = {tableau[-1, -1]:.2f}\")\n", "    return x, tableau[-1, -1]\n", "\n", "x, z = simplex(c, A, b)"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Método Simplex Tableau\n",
+    "### Projeto M210 – Otimização\n",
+    "\n",
+    "Preencha os coeficientes abaixo (até 4 variáveis e 4 restrições)\n",
+    "e execute todas as células para obter o resultado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quantidade de variáveis e restrições do exemplo\n",
+    "n_vars = 4   # número de variáveis de decisão (x1, x2, x3, x4)\n",
+    "n_rest = 4   # número de restrições\n",
+    "\n",
+    "# Coeficientes da função objetivo (Max Z)\n",
+    "# Exemplo: Z = 3x1 + 5x2 + 2x3 + 4x4\n",
+    "c = [3, 5, 2, 4]\n",
+    "\n",
+    "# Matriz das restrições (lado esquerdo A·x)\n",
+    "# Cada linha representa uma restrição\n",
+    "A = [\n",
+    "    [2, 1, 1, 0],   # 2x1 + 1x2 + 1x3 + 0x4 <= 8\n",
+    "    [1, 2, 0, 1],   # 1x1 + 2x2 + 0x3 + 1x4 <= 8\n",
+    "    [1, 1, 2, 3],   # 1x1 + 1x2 + 2x3 + 3x4 <= 10\n",
+    "    [0, 2, 1, 1]    # 0x1 + 2x2 + 1x3 + 1x4 <= 6\n",
+    "]\n",
+    "\n",
+    "# Lado direito das restrições (vetor b)\n",
+    "b = [8, 8, 10, 6]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from prettytable import PrettyTable\n",
+    "\n",
+    "def simplex_tableau(c, A, b):\n",
+    "    \"\"\"Monta o tableau inicial do método Simplex (forma padrão Max).\"\"\"\n",
+    "    A = np.array(A, dtype=float)\n",
+    "    b = np.array(b, dtype=float)\n",
+    "    m, n = A.shape  # m = nº restrições, n = nº variáveis de decisão\n",
+    "\n",
+    "    # Tamanho do tableau: m linhas de restrições + 1 linha de Z\n",
+    "    # Colunas: n variáveis + m folgas + 1 termo independente (b)\n",
+    "    tableau = np.zeros((m + 1, n + m + 1), dtype=float)\n",
+    "\n",
+    "    # Parte das variáveis de decisão\n",
+    "    tableau[:m, :n] = A\n",
+    "    # Identidade para variáveis de folga\n",
+    "    tableau[:m, n:n + m] = np.eye(m)\n",
+    "    # Coluna b (lado direito)\n",
+    "    tableau[:m, -1] = b\n",
+    "    # Linha da função objetivo (coeficientes negativos para Max)\n",
+    "    tableau[-1, :n] = -np.array(c, dtype=float)\n",
+    "    return tableau\n",
+    "\n",
+    "\n",
+    "def mostrar_tableau(tableau):\n",
+    "    \"\"\"Mostra o tableau com nomes de linhas e colunas para ficar mais legível.\"\"\"\n",
+    "    m = tableau.shape[0] - 1          # nº restrições\n",
+    "    total_cols = tableau.shape[1]\n",
+    "    n = total_cols - m - 1            # nº variáveis de decisão\n",
+    "\n",
+    "    # Nomes das colunas: x1..xn, s1..sm, b\n",
+    "    colunas = [f\"x{i+1}\" for i in range(n)] + [f\"s{i+1}\" for i in range(m)] + [\"b\"]\n",
+    "\n",
+    "    t = PrettyTable()\n",
+    "    t.field_names = [\"Linha\"] + colunas\n",
+    "\n",
+    "    for idx, row in enumerate(tableau):\n",
+    "        if idx < m:\n",
+    "            nome_linha = f\"R{idx+1}\"\n",
+    "        else:\n",
+    "            nome_linha = \"Z\"\n",
+    "        t.add_row([nome_linha] + [f\"{val:.2f}\" for val in row])\n",
+    "    print(t)\n",
+    "\n",
+    "\n",
+    "def simplex(c, A, b):\n",
+    "    \"\"\"Executa o método Simplex (tableau) e mostra as iterações de forma organizada.\"\"\"\n",
+    "    tableau = simplex_tableau(c, A, b)\n",
+    "    m, n = len(A), len(A[0])\n",
+    "    iteracao = 0\n",
+    "\n",
+    "    print(\"Tableau inicial:\")\n",
+    "    mostrar_tableau(tableau)\n",
+    "\n",
+    "    # Enquanto houver coeficiente negativo na linha de Z (colunas das variáveis)\n",
+    "    while any(tableau[-1, :-1] < 0):\n",
+    "        iteracao += 1\n",
+    "        print(\"\\n\" + \"=\" * 70)\n",
+    "        print(f\"Iteração {iteracao}:\")\n",
+    "\n",
+    "        # Escolha da coluna pivô (variável que entra na base)\n",
+    "        col_pivo = int(np.argmin(tableau[-1, :-1]))\n",
+    "\n",
+    "        # Verifica se o problema é ilimitado\n",
+    "        if all(tableau[:-1, col_pivo] <= 0):\n",
+    "            print(\"Problema ilimitado (sem solução ótima finita).\")\n",
+    "            return None, None\n",
+    "\n",
+    "        # Razão mínima para escolher a linha pivô (variável que sai da base)\n",
+    "        razoes = tableau[:-1, -1] / tableau[:-1, col_pivo]\n",
+    "        razoes[tableau[:-1, col_pivo] <= 0] = np.inf\n",
+    "        lin_pivo = int(np.argmin(razoes))\n",
+    "\n",
+    "        print(f\"Coluna pivô: {col_pivo}  |  Linha pivô: {lin_pivo}\")\n",
+    "\n",
+    "        # Normaliza a linha pivô\n",
+    "        pivo = tableau[lin_pivo, col_pivo]\n",
+    "        tableau[lin_pivo, :] /= pivo\n",
+    "\n",
+    "        # Zera as demais posições da coluna pivô\n",
+    "        for i in range(tableau.shape[0]):\n",
+    "            if i != lin_pivo:\n",
+    "                fator = tableau[i, col_pivo]\n",
+    "                tableau[i, :] -= fator * tableau[lin_pivo, :]\n",
+    "\n",
+    "        print(\"Tableau após o pivoteamento:\")\n",
+    "        mostrar_tableau(tableau)\n",
+    "\n",
+    "    print(\"\\n\" + \"=\" * 70)\n",
+    "    print(\"Solução ótima encontrada:\")\n",
+    "    mostrar_tableau(tableau)\n",
+    "\n",
+    "    # Recupera os valores ótimos das variáveis de decisão\n",
+    "    n_vars = len(c)\n",
+    "    x = np.zeros(n_vars)\n",
+    "    for j in range(n_vars):\n",
+    "        col = tableau[:-1, j]\n",
+    "        # Verifica se é coluna básica (um 1 e o resto 0)\n",
+    "        if np.isclose(col, 0).sum() == (len(col) - 1) and np.isclose(col, 1).sum() == 1:\n",
+    "            lin = int(np.where(np.isclose(col, 1))[0][0])\n",
+    "            x[j] = tableau[lin, -1]\n",
+    "\n",
+    "    z_otimo = tableau[-1, -1]\n",
+    "\n",
+    "    print(\"\\nValores ótimos das variáveis:\")\n",
+    "    for i, val in enumerate(x, start=1):\n",
+    "        print(f\"x{i} = {val:.4f}\")\n",
+    "    print(f\"\\nValor ótimo da função objetivo Z* = {z_otimo:.4f}\")\n",
+    "\n",
+    "    return x, z_otimo\n",
+    "\n",
+    "\n",
+    "# Executa o método Simplex para os dados definidos na célula anterior\n",
+    "x, z = simplex(c, A, b)\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
